@@ -85,6 +85,7 @@ namespace {
 
 	std::string (*make_magnet_uri0)(torrent_handle const&) = make_magnet_uri;
 	std::string (*make_magnet_uri1)(torrent_info const&) = make_magnet_uri;
+	std::string (*make_magnet_uri2)(add_torrent_params const&) = make_magnet_uri;
 }
 
 void bind_magnet_uri()
@@ -94,6 +95,7 @@ void bind_magnet_uri()
 #endif
 	def("make_magnet_uri", make_magnet_uri0);
 	def("make_magnet_uri", make_magnet_uri1);
+	def("make_magnet_uri", make_magnet_uri2);
 	def("parse_magnet_uri", parse_magnet_uri_wrap);
 	def("parse_magnet_uri_dict", parse_magnet_uri_dict);
 }
